# fastapi-dependency-tutorial

./: README.md  main.py  pyproject.toml
data/: hubspot.json  salesforce.json
